# Lab_2-IntegralPair

./: .gitignore  CMakeLists.txt
include/core/: AngleDegrees.hpp  AngleRadians.hpp  ExplicitTypeWrap.hpp  Factory.hpp  Pair.hpp
include/database/: IStorage.hpp  SQLiteStorage.hpp
include/gui/: MainWindow.hpp
src/console/: CMakeLists.txt  main_console.cpp
src/core/: AngleDegrees.cpp  AngleRadians.cpp  CMakeLists.txt  Pair.cpp
src/database/: CMakeLists.txt  SQLiteStorage.cpp
src/gui/: CMakeLists.txt  MainWindow.cpp  main_gui.cpp
src/web/: CMakeLists.txt  index.html  main_web.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  angle_degrees_tests.cpp  angle_radians_tests.cpp  factory_tests.cpp
